tests/type/errors/bad_subtract1.typedsol
2:14 error: Mismatched types for binary operator